# Bipedal_MPC

./: MJMODEL.TXT  README.md  build.sh
src/assets/: CMakeLists.txt  package.xml
src/assets/p1/: PF_A.urdf  PF_A.xml  config.yaml
src/core/: CMakeLists.txt  package.xml
src/core/cmake/: clear_cxx_flags.cmake
src/core/include/core/: types.h
src/core/include/core/gait/: LegLogic.h  ModeSchedule.h  MotionPhaseDefinition.h
src/core/include/core/misc/: Benchmark.h  Buffer.h  LinearAlgebra.h  Lookup.h  NumericTraits.h  Numerics.h
src/core/include/core/trajectory/: CubicSplineInterpolation.h  CubicSplineTrajectory.h  ReferenceBuffer.h  TrajectoryBase.h
src/core/src/: types.cc
src/core/src/gait/: LegLogic.cc  ModeSchedule.cc
src/core/src/misc/: LinearAlgebra.cc
src/core/src/trajectory/: CubicSplineInterpolation.cc  CubicSplineTrajectory.cc  ReferenceBuffer.cc
src/motion/control/: CMakeLists.txt  package.xml
src/motion/control/include/control/: MatrixDB.h  TrajectoryStabilization.h  WholeBodyController.h
src/motion/control/src/: TrajectoryStabilization.cc  WholeBodyController.cc
src/motion/estimation/: CMakeLists.txt  package.xml
src/motion/estimation/include/estimation/: StateEstimationLKF.h
src/motion/estimation/src/: StateEstimationLKF.cc
src/motion/gait/: CMakeLists.txt  package.xml
src/motion/gait/include/gait/: CycleTimer.h  GaitSchedule.h
src/motion/gait/src/: CycleTimer.cc  GaitSchedule.cc
src/motion/generation/: CMakeLists.txt  package.xml
src/motion/generation/include/generation/: ConvexMPC.h  FootholdOptimization.h  TrajectorGeneration.h
src/motion/generation/src/: ConvexMPC.cc  FootholdOptimization.cc  TrajectorGeneration.cc
src/motion/management/: CMakeLists.txt  package.xml
src/motion/management/include/: DataVisualization.h  Initialization.h  JoyStick.h  MotionManager.h
src/motion/management/launch/: management_launch.py
src/motion/management/src/: DataVisualization.cc  Initialization.cc  JoyStick.cc  MotionManager.cc  main.cc
src/sim/: CMakeLists.txt  package.xml
src/sim/include/sim/: SimPublisher.h
src/sim/launch/: sim_launch.py
src/sim/src/: sim.cc
src/sim/src/sim/: SimPublisher.cc
src/third_parties/blasfeo_ament/: CMakeLists.txt  package.xml
src/third_parties/hpipm_ament/: CMakeLists.txt  package.xml
src/third_parties/hpipm_interface_ament/: CMakeLists.txt  package.xml
src/third_parties/mujocodl/: CMakeLists.txt  package.xml
src/third_parties/mujocodl/mujoco/simulate/: simulate.cc
src/third_parties/pinocchio/: .gitignore  CMakeLists.txt
src/third_parties/pinocchio_interface/: CMakeLists.txt  package.xml
src/third_parties/pinocchio_interface/cmake/: pinocchio_config.cmake
src/third_parties/pinocchio_interface/include/pinocchio/: Orientation.h  PinocchioInterface.h
src/third_parties/pinocchio_interface/src/pinocchio/: Orientation.cc  PinocchioInterface.cc
src/trans/: CMakeLists.txt  package.xml
src/trans/msgs/: ActuatorCmds.msg  TouchSensor.msg
src/visualization/: CMakeLists.txt  package.xml
src/visualization/config/: atlas_config.rviz  config.rviz  spot_config.rviz
src/visualization/launch/: p1_vis_launch.py
