<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1358458373@qq.com">otsd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>trans</depend>
  <depend>mujocodl</depend>
  <depend>assets</depend>
  <depend>rclcpp</depend>
  <depend>communication</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
