<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>management</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1358458373@qq.com">otsd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>trans</depend>
  <depend>core</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>assets</depend>
  <depend>pinocchio_interface</depend>
  <depend>estimation</depend>
  <depend>gait</depend>
  <depend>generation</depend>
  <depend>control</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>joy</depend>
  <depend>mros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>